--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "view-ui-plus": "^1.2.0-beta.4",
         "vue": "^3.2.37",
+        "vue-i18n": "^9.2.0-beta.36",
         "vue-router": "^4.0.16",
         "vuex": "^4.0.2"
     }
