--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
-        "view-ui-plus": "^1.2.0-beta.4",
+        "install": "^0.13.0",
+        "npm": "^8.13.1",
+        "view-ui-plus": "^1.3.0",
         "vue": "^3.2.37",
         "vue-i18n": "^9.2.0-beta.36",
         "vue-router": "^4.0.16",
